2024-09-22 Update Project Configuration.